Bug 418146 - kconfig_compiler with GenerateProperties creates uncompilable/wrong code
Summary: kconfig_compiler with GenerateProperties creates uncompilable/wrong code
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kconfig
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.67.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Matthew Dawson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-24 18:20 UTC by Albert Astals Cid
Modified: 2020-02-25 15:07 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Astals Cid 2020-02-24 18:20:53 UTC
Patch kconfig with this

diff --git a/autotests/kconfig_compiler/test13.kcfg b/autotests/kconfig_compiler/test13.kcfg
index cf78c70..8224db4 100644
--- a/autotests/kconfig_compiler/test13.kcfg
+++ b/autotests/kconfig_compiler/test13.kcfg
@@ -8,5 +8,10 @@
     <entry name="picturesDir" type="Url" />
     <entry name="brightness" type="double" />
     <entry name="StartsWithUppercase" type="bool" />
+    <entry key="SlidesAdvanceTime" type="UInt" >
+        <default>5</default>
+        <min>1</min>
+        <max>3600</max>
+    </entry>
   </group>
 </kcfg>
diff --git a/autotests/kconfig_compiler/test13.kcfgc b/autotests/kconfig_compiler/test13.kcfgc
index a0c3c13..27903f6 100644
--- a/autotests/kconfig_compiler/test13.kcfgc
+++ b/autotests/kconfig_compiler/test13.kcfgc
@@ -1,4 +1,4 @@
 ClassName=Test13
 GenerateProperties=true
-Mutators=brightness
+Mutators=true
 File=test13.kcfg


Run make, see how it fails to compile
Comment 1 Albert Astals Cid 2020-02-24 18:21:24 UTC
Kevin, Tomaz, added you since you've been having a look at kconfig_compiler recently as far as i can see
Comment 2 Kevin Ottens 2020-02-25 07:38:24 UTC
Could you test https://phabricator.kde.org/D27497 ? I think it will address your issue.
Comment 3 hchain 2020-02-25 15:07:17 UTC
Closed by https://phabricator.kde.org/D27497